Printing: Fix regression with system dialogs on Windows.

This effectively reverts one file in r551457 which was confusing. Add a
comment to explain what is going on.

BUG=834172

Change-Id: I27279382d1b6bbc08688a31a3dc308a791bbc37f
Reviewed-on: https://chromium-review.googlesource.com/1020068
Reviewed-by: Sean Kau <skau@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552492}
Former-commit-id: 1ba7352fff013c8f4aee1cc6b38987a9ae4d6ac3